# standup-picker

./: Cargo.toml  memory.x
examples/: roulette.rs
src/: main.rs
