[package]
authors = ["James", "Wes"]
categories = ["embedded", "no-std"]
description = "An STM32F3DISCOVERY based stand up picker"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
name = "standup-picker"
repository = "https://github.com/wezm/standup-picker"
version = "0.1.5"

[dependencies]
cast = { version = "0.2.0", default-features = false }
cortex-m = "0.2.6"
cortex-m-rt = "0.2.0"
cortex-m-rtfm = "0.1.0"
f3 = "0.4.1"

[profile]

[profile.release]
debug = true
lto = true
